--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,12 @@ layout: base
 ---
 
 <style>ol.bibliography li { list-style: none }</style>
+
+<link rel="stylesheet" href="{{ "/assets/css/main.min.css" | prepend: site.baseurl }}">
+<script src="{{ "/assets/js/vendors.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/js/app.min.js" | prepend: site.baseurl }}"></script>
+{% include landing-page.html %}
+
 {% include header.html type="post" %}
 
 <div class="{% if page.full-width %} container-fluid {% else %} container-md {% endif %}">
