--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: base
 <link rel="stylesheet" href="{{ "/assets/css/main.min.css" | prepend: site.baseurl }}">
 <script src="{{ "/assets/js/vendors.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/js/app.min.js" | prepend: site.baseurl }}"></script>
-{% include landing-page.html %}
+<!-- {% include landing-page.html %} -->
 
 {% include header.html type="post" %}
 
