--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -58,7 +58,7 @@ layout: base
         </div>
       {% endif %}
       
-<!--       {% include landing-page.html %} -->
+      {% include landing-page.html %}
       
       {% if page.after-content %}
         <div class="after-content">
