--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -4,9 +4,9 @@ layout: base
 
 <style>ol.bibliography li { list-style: none }</style>
 
-<!-- <link rel="stylesheet" href="{{ "/assets/css/main.min.css" | prepend: site.baseurl }}"> -->
+<!-- <link rel="stylesheet" href="{{ "/assets/css/main.min.css" | prepend: site.baseurl }}">
 <script src="{{ "/assets/js/vendors.min.js" | prepend: site.baseurl }}"></script>
-<script src="{{ "/assets/js/app.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/assets/js/app.min.js" | prepend: site.baseurl }}"></script> -->
 
 {% include header.html type="post" %}
 
