--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -87,4 +87,6 @@ layout: base
   </div>
 </div>
 
-
+<!-- <link rel="stylesheet" href="{{ "/assets/css/main.min.css" | prepend: site.baseurl }}"> -->
+<!-- <script src="{{ "/assets/js/vendors.min.js" | prepend: site.baseurl }}"></script> -->
+<script src="{{ "/assets/js/app.min.js" | prepend: site.baseurl }}"></script>
