--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -89,4 +89,4 @@ layout: base
 
 <!-- <link rel="stylesheet" href="{{ "/assets/css/main.min.css" | prepend: site.baseurl }}"> -->
 <script src="{{ "/assets/js/vendors.min.js" | prepend: site.baseurl }}"></script>
-<!-- <script src="{{ "/assets/js/app.min.js" | prepend: site.baseurl }}"></script> -->
+<script src="{{ "/assets/js/app.min.js" | prepend: site.baseurl }}"></script>
