--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,5 +1,5 @@
 <div id="landing">
   <div class="landing-title">
-    <h1>
-      <span id="txt-rotate" data-period="500" data-rotate='["Nwafor is a guru", "I am fucking tired of this program."]'>
+<!--     <h1>
+      <span id="txt-rotate" data-period="500" data-rotate='["Nwafor is a guru", "I am fucking tired of this program."]'> -->
 
