--- a/_layouts/post1.html
+++ b/_layouts/post1.html
@@ -2,6 +2,10 @@
 layout: base
 ---
 
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+
 <style>ol.bibliography li { list-style: none }</style>
 <script src="{{ "/assets/js/vendors.min.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/assets/js/app.min.js" | prepend: site.baseurl }}"></script>
