--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,8 +38,8 @@
 
       </p>
       {% unless site.remove-ads %}<p class="theme-by text-muted">
-        Powered by
-        <a href="https://beautifuljekyll.com">Beautiful Jekyll</a>
+        My work address
+        <a href="https://www.femto-st.fr/en/femto-people/chibundonwafor">FEMTO-ST</a>
       </p>{% endunless %}
       </div>
     </div>
