--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
 
       </p>
       {% unless site.remove-ads %}<p class="theme-by text-muted">
-        My work address
+        My work address is at
         <a href="https://www.femto-st.fr/en/femto-people/chibundonwafor">FEMTO-ST</a>
       </p>{% endunless %}
       </div>
